refactored to use the com.stano gradle plugins